# Nova-agentic-layer-over-taskflow

./: .env.example  .gitignore  AGENTS.md  CONTEXT.md  LICENSE  README.md  TESTING.md  pyproject.toml  setup.bat  setup.sh
.claude/skills/nova/: SKILL.md
.github/workflows/: nova-daily-brief.yml
docs/: VIDEO_SCRIPT.md  WRITEUP.md  architecture.md  security.md
eval/: run_eval.py
nova/: __init__.py  __main__.py  config.py  main.py  models.py  orchestrator.py
nova/agents/: briefing_agent.py  coach_agent.py  fast_coach.py  greeting_agent.py  mcp_backed.py  pattern_agent.py  planner_propose.py  planning_agent.py  profile_agent.py  reflection_agent.py  tools_adk.py
nova/mcp/: __init__.py  server.py  taskflow_reader.py  taskflow_writer.py  tools.py
nova/memory/: __init__.py  store.py
nova/security/: audit.py  data_guard.py  input_validator.py
nova/seed/: opportunities.json  tasks.json
nova/web/: __init__.py  server.py
nova/web/static/: index.html
